# meshwiki

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  MINIMAX.md  Makefile  README.md  TODO.md  dev.sh  docker-compose.prod.yml  pyproject.toml
graph-core/: Cargo.toml
graph-core/src/: graph.rs  lib.rs  watcher.rs
graph-core/tests/: test_file_watcher.py  test_query.py
orchestrator/: .env.example  e2b.Dockerfile  pyproject.toml  test_grinder_live.py
orchestrator/factory/: __init__.py  armory_prompts.py  config.py  cost.py  graph.py  main.py  state.py  webhook_server.py
orchestrator/factory/agents/: grinder_agent.py  pm_agent.py
orchestrator/factory/bots/: __init__.py  base.py  (+7 more)
orchestrator/scripts/: seed_pressure_test.py
orchestrator/tests/: test_anthropic_circuit.py  test_bookkeeper.py  test_bots.py  test_ci_fixer_bot.py  test_class_gap_researcher.py  test_concurrency.py  test_config.py  test_cost.py  test_github_client.py  test_graph.py  test_grinder_agent.py  test_http_clients.py  test_m23_armory_validation.py  test_meshwiki_client.py  test_nodes.py  test_pipeline.py  test_pm_agent.py  test_routing.py  test_routing_assign.py  test_state_reducers.py  test_webhook_server.py  test_worker_heartbeat.py
src/: pyproject.toml
src/e2e/: conftest.py  test_editor.py  test_navigation.py  test_page_lifecycle.py
src/meshwiki/: auth.py  config.py  main.py  utils.py
src/tests/: conftest.py  test_api_agents.py  test_api_auth.py  test_api_pages.py  test_api_tasks.py  test_app_smoke.py  test_auth.py  test_callout_macro.py  test_ci_fixer_canary.py  test_clock_js.py  test_editor.py  test_epic_status_macro.py  test_github_webhook.py  test_graph_focus.py  test_graph_integration.py  test_graph_node_sizing.py  test_graph_search.py  test_graph_subpage_edges.py  test_graph_visualization.py  test_history_routes.py  test_hover_card_template.py  test_include_macro.py  test_macros.py  test_newpage_macro.py  test_observability.py  test_page_cache.py  test_page_list_macro.py  test_page_tree.py  test_parser.py  test_preview_endpoint.py  test_recent_changes_macro.py  test_revision_store.py  test_running_clock_extension.py  test_search.py  test_storage.py  test_storage_revisions.py  test_task_machine.py  test_task_status_macro.py  test_utils.py  test_webhooks.py
(+95 files in other folders)
